--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ social:
 analytics:
   provider               : false # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "UA-113204313-1"
 
 
 # Site Author
